--- a/wwwmain/src/app/top-bar/top-bar.component.html
+++ b/wwwmain/src/app/top-bar/top-bar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>World On Wheels</span>
+    <a class="menu-item" routerLink="/">World On Wheels</a>
+    <a class="menu-item" routerLink="/cars">Cars</a>
     <span class="spacer"></span>
     <div style="margin: 15px;" *ngIf="user.nickname!==''">
       <span>{{user.nickname}}</span>
