--- a/wwwmain/src/app/core/top-bar/top-bar.component.html
+++ b/wwwmain/src/app/core/top-bar/top-bar.component.html
@@ -2,6 +2,7 @@
   <mat-toolbar-row>
     <a class="menu-item" routerLink="/">World On Wheels</a>
     <a class="menu-item" routerLink="/cars">Cars</a>
+    <a class="menu-item" routerLink="/motorcycles">Motorcycles</a>
     <span class="spacer"></span>
     <div style="margin: 15px;" *ngIf="user.nickname!==''">
       <span>{{user.nickname}}</span>
